improve README, add logger, add validate
